--- a/test.html
+++ b/test.html
@@ -31,7 +31,7 @@
     <script>
         document.getElementById('test-api').addEventListener('click', async function () {
             try {
-                const response = await fetch('http://3.111.31.34/api/login', {
+                const response = await fetch('https://backend.myemirateshome.com/api/login', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
